testsuite/tests/th/T26098_splice.stderr
T26098_splice.hs:9:20: error: [GHC-28914]
    • Level error:
      ‘Foo’ is used at level -1 but it is bound at levels {0, 1}
        • imported at level 1 from ‘T26098A_splice’ at T26098_splice.hs:5:1-27
        • imported from ‘T26098A_splice’ at T26098_splice.hs:4:1-21
    • In the untyped splice: $(undefined :: Foo)

